# kisp

./: .gitignore  Cargo.toml
src/: ast.rs  builtin_functions.rs  evalvalue.rs  interpreter.rs  lexer.rs  lib.rs  list.rs  main.rs  numeric.rs  parser.rs  scope.rs  stacktrace.rs  testutils.rs
src/stdlib/: arithmetic.rs  comparison.rs  functional.rs  lang.rs  lists.rs  mod.rs  output.rs  types.rs  util.rs
src/value/: builtin.rs  callable.rs  error.rs  list.rs  mod.rs  numeric.rs
tests/: basic.rs  tail_recursion.rs
