[package]
name = "kisp"
version = "0.1.0"
edition = "2021"
default-run = "testing"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "shell"
path = "src/bin/shell.rs"

[[bin]]
name = "testing"
path = "src/bin/testing.rs"

[dependencies]
